--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ ul {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: flex-start;
 }
 
 
