--- a/styles.css
+++ b/styles.css
@@ -98,6 +98,10 @@ li {
 .section-three {
     background-color: lightcoral;
     height: 800px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex: 1 1 auto;
 
 }
 
