--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,12 @@ header {
     
 }
 
+a {
+    text-decoration: none;
+    color: black;
+}
+
+
 h1 {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 60px;
@@ -150,5 +156,26 @@ iframe {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: navy;
     font-size: 20px;
+}
+
+button {
+    border: 1px solid blueviolet;
+    border-radius: 5px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: xx-large;
+    padding: 10px;
+    margin: 2px;
+    transition-duration: .4s;
+}
+
+button:hover {
+    background-color: aqua;
+    color: white;
+}
+
+button:active {
+    background-color: green;
+    box-shadow: 0 5px darkblue;
+    transform: translateY(4px);
 }
 
