--- a/styles.css
+++ b/styles.css
@@ -28,16 +28,7 @@ h1 {
 
 ul {
     list-style-type: none;
-    padding: 5px;
-}
-
-li {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
     padding: 10px;
-    margin: 0px 3px;
-    border: 1px solid limegreen;
-    border-radius: 10px;
-    background-color: aliceblue;
 }
 
 .container-navigation {
@@ -160,7 +151,7 @@ button {
     border: 1px solid blueviolet;
     border-radius: 5px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: xx-large;
+    font-size: x-large;
     padding: 10px;
     margin: 2px;
     transition-duration: .4s;
