--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,13 @@
 
 
 body{
-    background-color: limegreen;
+    background-color: orangered;
 }
 
 /* header sytles */
 
 header {
-    background-color: hotpink;
+    background-color: #F29F05;
     padding: 10px 0px 10px 0px;
     
     
@@ -82,7 +82,7 @@ ul {
 /* section 2 center item */
 
 .section-two {
-    background-color: orangered;
+    background-color: #BF0426;
     height: 700px;
     display: flex;
     align-items: center;
@@ -93,7 +93,7 @@ ul {
 /* section 3 youtube video */
 
 .section-three {
-    background-color: lightcoral;
+    background-color: #D95A11;
     height: 800px;
     display: flex;
     align-items: center;
@@ -110,7 +110,7 @@ iframe {
 /* section 4 embed audio */
 
 .section-four {
-    background-color: darkslateblue;
+    background-color: #BF0426;
     height: 500px;
     display: flex;
     justify-content: center;
@@ -126,7 +126,7 @@ iframe {
 /* section 5 media items */
 
 .section-five {
-    background-color: goldenrod;
+    background-color: #D95A11;
 }
 
 .media-container {
@@ -169,7 +169,7 @@ button:active {
 }
 
 footer {
-    background-color: rebeccapurple;
+    background-color: #F29F05;
     height: 30px;
     text-align: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -179,7 +179,7 @@ footer {
 }
 
 .button-one-section {
-    background-color: cornflowerblue;
+    background-color: #BF0426;
     padding: 20px 0px;
     display: flex;
     justify-content: center;
