--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ a {
 
 
 h1 {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Tangerine;
     font-size: 60px;
     text-align: center;
 }
